# public/openapi.yaml
@@ -80,7 +80,7 @@ paths:
                   message:
                     type: string
                   data:
-                    $ref: '#/components/schemas/ValidationError'
+                    $ref: '#/components/schemas/Error'
   /products:
     get:
       summary: Returns a list of products in the database.
@@ -348,20 +348,19 @@ paths:
                     type: string
                   data:
                     $ref: '#/components/schemas/Error'
+  /cart/{itemId}:
+    parameters:
+      - name: itemId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+          minimum: 1
     delete:
       summary: Removes product with specified id from the cart. Requires authorization
       security:
         - bearerAuth: []
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                id:
-                  type: integer
-              required: [id]
       responses:
         '200':
           description: A product has been removed from the cart.
@@ -389,6 +388,173 @@ paths:
                     type: string
         '400':
           description: Bad request. Product has not been removed from the cart.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  message:
+                    type: string
+                  data:
+                    $ref: '#/components/schemas/Error'
+  /orders:
+    get:
+      summary: Returns list of orders made by authenthiticated user. Requires authorization
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Returns list of orders made by authenthiticated user or an empty list if no orders have been made.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  message:
+                    type: string
+                  data:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Order'
+        '401':
+          description: Access token is missing or invalid
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+    post:
+      summary: Creates a new order consisting of all item in the Cart. Requires authorization
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: false
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                phone:
+                  type: string
+                description:
+                  type: string
+      responses:
+        '200':
+          description: New order has been created.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  message:
+                    type: string
+                  data:
+                    $ref: '#/components/schemas/Order'
+        '401':
+          description: Access token is missing or invalid
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+        '400':
+          description: Bad request. Product has not been added to the cart.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  message:
+                    type: string
+                  data:
+                    $ref: '#/components/schemas/OrderValidationError'
+  /orders/{orderId}:
+    parameters:
+      - name: orderId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+          minimum: 1
+    get:
+      summary: Returns the order of authenthiticated user by ID.
+      responses: 
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  message:
+                    type: string
+                  data:
+                    $ref: '#/components/schemas/Order'
+        '401':
+          description: Access token is missing or invalid
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+        '403':
+          description: Access is forbidden beacuse order belongs to another user
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  message:
+                    type: string
+                  data:
+                    $ref: '#/components/schemas/Error'
+    delete:
+      summary: Deletes the order of authenthiticated user by ID.
+      responses: 
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  message:
+                    type: string
+                  data:
+                    type: array
+                    items: {}
+        '401':
+          description: Access token is missing or invalid
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+        '403':
+          description: Access is forbidden beacuse order belongs to another user
           content:
             application/json:
               schema:
@@ -493,6 +659,46 @@ components:
           type: array
           items:
             type: string
+    Order:
+      required: [id, created_by_id, status, created_at, price, items]
+      type: object
+      properties:
+        id:
+          type: integer
+        created_by_id:
+          type: integer
+        description:
+          type: string
+        phone:
+          type: string
+        status:
+          type: string
+        created_at:
+          type: string
+        price:
+          type: string
+        items:
+          type: integer
+        products:
+          type: array
+          items:
+            $ref: '#/components/schemas/OrderItem'
+    OrderItem:
+      required: [id, name, category, quantity, price, total_price]
+      type: object
+      properties:
+        id:
+          type: integer
+        name:
+          type: string
+        category:
+          type: string
+        quantity:
+          type: integer
+        price:
+          type: string
+        total_price:
+          type: string
     Error:
       type: object
       properties:
@@ -516,6 +722,17 @@ components:
           items:
             type: string
         c_password:
+          type: array
+          items:
+            type: string
+    OrderValidationError:
+      type: object
+      properties:
+        phone:
+          type: array
+          items:
+            type: string
+        description:
           type: array
           items:
             type: string
